chore(deps): update Proton artifacts to 0.72
Upgrade the shared Proton core and QA artifacts from 0.71 to 0.72 and record the dependency update in the changelog.

Proton 0.72's generated-source formatter needs javac module exports in every processor-enabled compile. Reuse the existing formatter export list for those Buildr targets and inject the same options into downstream Buildr fixtures so local downstream verification compiles against the shaded processor.